# BeatLibrary

./: CMakeLists.txt  README.md
src/: App.xaml  App.xaml.cs  BeatSaverAPI.cs  BeatmapDetailWindow.xaml  BeatmapDetailWindow.xaml.cs  CMakeLists.txt  DataClasses.cs  Database.cs  MainWindow.xaml  MainWindow.xaml.cs  ScanWindow.xaml  ScanWindow.xaml.cs  Scanner.cs  Settings.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs
test/: CMakeLists.txt  Full_test.cs  Scanner_tests.cs  moc_App.cs  moc_Database.cs  moc_Settings.cs.in
test/mocks/: mock_App.cs  mock_Settings.cs.in
